# cujak

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cufft.hpp  exception.cpp  exception.hpp  fft2d.hpp  math.hpp  operators.hpp  thrust.hpp  traits.hpp
EOM/: RK4.hpp  interface.hpp
EOM/test/: CMakeLists.txt  RK4.cu
cuda/: CMakeLists.txt  cufft.hpp  exception.cpp  exception.hpp
cuda/test/: CMakeLists.txt  exception.cu
cufft/: CMakeLists.txt  Coefficient.hpp  Converter.cu  Converter.hpp  Field.hpp  algorithm.hpp  fft2d.proto  fft2d.py  pb.hpp
cufft/test/: .gitignore  CMakeLists.txt  algorithm.cu  convert.cu  pb.cu
doc/: Doxyfile
fft2d/: CMakeLists.txt  Converter.hpp  algorithm.cu  algorithm.hpp  data.hpp  fft2d.proto  fft2d.py  pb.hpp  pb_convert.cu  pb_convert.hpp  pb_io.cu  pb_io.hpp  pb_traits.hpp  plan.cu  plan.hpp  plot.py
fft2d/test/: .gitignore  CMakeLists.txt  algorithm.cu  convert.cu  data.cu  pb.cu
test/: CMakeLists.txt  cufft.cu  exception.cu  operators.cu
testing/: CMakeLists.txt  check.hpp  exception.hpp  macros.hpp
testing/test/: CMakeLists.txt  check.cpp
util/: CMakeLists.txt  algorithm.hpp  assert.hpp  io.hpp  log.hpp  string.hpp
util/CUDA/: CMakeLists.txt  cuda_util.cmake  cufft.cu  cufft.hpp  exception.hpp
util/CUDA/test/: CMakeLists.txt  cufft.cu  exception.cu
util/test/: CMakeLists.txt  algorithm.cpp  assert.cpp
